Refactor control system with DOT generation.